# kainess-api-rust

./: .env  .env copy  Cargo.toml  README.md  foodb_basic.sql
migrations/2023-08-30-233908_create_fundamental_tables/: down.sql  up.sql
migrations/tcm_sql/: herbs.sql
src/: config.rs  error_handler.rs  main.rs
src/api/: api.rs  mod.rs
src/api/auth/: jwt_auth.rs  mod.rs  structs.rs
src/api/routes/: helper_functions.rs  mail.rs  mod.rs  recipe.rs  tcm.rs  user.rs
src/db/: database.rs  mod.rs  queryable_text.rs
src/mailer/: helper_functions.rs  mailer.rs  mod.rs  structs.rs
src/models/: mod.rs  schema.rs  structs.rs  types.rs
src/tera/: tera.rs
src/user/: helper_fucntions.rs  mod.rs
tcm_sql/: herbs.sql
templates/: index.html  reference.html
templates/onboarding/: greeting.txt
